@@ -102,6 +102,9 @@
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-javadoc-plugin</artifactId>
 						<version>3.11.2</version>
+						<configuration>
+							<additionalOptions>--enable-preview</additionalOptions>
+						</configuration>
 						<executions>
 							<execution>
 								<id>attach-javadocs</id>
